crates/opca-core/tests/snapshots/focus_prompt__multiple_dimensions.snap
---
source: crates/opca-core/tests/focus_prompt.rs
expression: prompt
---
You have a reporting tool `report_highlight`. You must monitor and report findings on these dimensions:
  - [security risks]
  - [breaking changes]
  - [performance regression]

When calling report_highlight, the `tag` field MUST match one of the dimensions above.
